feat: parallel and ordered processors execution